BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Attachments__c.field-meta.xml
<CustomField>
    <fullName>Attachments__c</fullName>
    <inlineHelpText>Description of attached files</inlineHelpText>
    <label>Attachments</label>
    <length>250</length>
    <type>Text</type>
</CustomField>