BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Colleague_in_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Colleague_in_Attendance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Colleague who has a Salesforce license that was in attendance</inlineHelpText>
    <label>Colleague in Attendance</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>