BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>