BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Competitor_Information__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Information__c</fullName>
    <label>Competitor Information</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>