BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Contact2__c.field-meta.xml
<CustomField>
    <fullName>Contact2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Site Visits (Contact2)</relationshipLabel>
    <relationshipName>Site_Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>