BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Contact3__c.field-meta.xml
<CustomField>
    <fullName>Contact3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Site Visits (Contact3)</relationshipLabel>
    <relationshipName>Site_Visits2</relationshipName>
    <type>Lookup</type>
</CustomField>