BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Engineers_in_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Engineers_in_Attendance__c</fullName>
    <label>Engineers in Attendance</label>
    <length>250</length>
    <type>Text</type>
</CustomField>