BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Hours_spent_travelling__c.field-meta.xml
<CustomField>
    <fullName>Hours_spent_travelling__c</fullName>
    <inlineHelpText>Total hours spent traveling to and from the customer site</inlineHelpText>
    <label>Hours spent travelling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>