BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Hours_spent_with_Customer__c.field-meta.xml
<CustomField>
    <fullName>Hours_spent_with_Customer__c</fullName>
    <inlineHelpText>Hours spent at site</inlineHelpText>
    <label>Hours spent with Customer</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>