BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>