BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Opportunity1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity1</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Site Visits</relationshipLabel>
    <relationshipName>Site_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>