BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Opportunity2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity2</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Site Visits (Opportunity2)</relationshipLabel>
    <relationshipName>Site_Visits1</relationshipName>
    <type>Lookup</type>
</CustomField>