BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Opportunity3__c.field-meta.xml
<CustomField>
    <fullName>Opportunity3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity3</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Site Visits (Opportunity3)</relationshipLabel>
    <relationshipName>Site_Visits2</relationshipName>
    <type>Lookup</type>
</CustomField>