BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Other_Colleague_in_Attendence__c.field-meta.xml
<CustomField>
    <fullName>Other_Colleague_in_Attendence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Collaegue who has a Salesforce license that was in attendance</inlineHelpText>
    <label>Other Colleague in Attendence</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Site_Visits2</relationshipName>
    <type>Lookup</type>
</CustomField>