BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/PD_Personnel_hours_on_site__c.field-meta.xml
<CustomField>
    <fullName>PD_Personnel_hours_on_site__c</fullName>
    <label>PD Personnel hours on site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>