BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/PD_Personnel_hours_spent_travelling__c.field-meta.xml
<CustomField>
    <fullName>PD_Personnel_hours_spent_travelling__c</fullName>
    <label>PD Personnel hours spent travelling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>