BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/PD_Personnel_in_Attendance__c.field-meta.xml
<CustomField>
    <fullName>PD_Personnel_in_Attendance__c</fullName>
    <label>PD Personnel in Attendance</label>
    <length>250</length>
    <type>Text</type>
</CustomField>