BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Site_name__c.field-meta.xml
<CustomField>
    <fullName>Site_name__c</fullName>
    <label>Site name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>