BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Name__c</fullName>
    <label>Site Visit Name</label>
    <type>TextArea</type>
</CustomField>