BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Site_Visit_Secondary_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Secondary_Purpose__c</fullName>
    <label>Site Visit Secondary Purpose</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Review</fullName>
            </value>
            <value>
                <fullName>Commissioning</fullName>
            </value>
            <value>
                <fullName>Innovation Presented</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sales Visit</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>