BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Type_of_Innovation_Presented__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Innovation_Presented__c</fullName>
    <label>Type of Innovation Presented</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Process/ Service</fullName>
            </value>
            <value>
                <fullName>Composite (Min Pro only)</fullName>
            </value>
            <value>
                <fullName>Fastener (Min Pro only)</fullName>
            </value>
            <value>
                <fullName>Ceramic</fullName>
                <isActive>false</isActive>
                <label>Ceramic</label>
            </value>
            <value>
                <fullName>Rubber</fullName>
                <isActive>false</isActive>
                <label>Rubber</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>