BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Unique_Days_spent_with_Customer__c.field-meta.xml
<CustomField>
    <fullName>Unique_Days_spent_with_Customer__c</fullName>
    <inlineHelpText>Each day spent with customer</inlineHelpText>
    <label>Unique Days spent with Customer</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>