BradkenProduction/force-app/main/default/objects/Site_Visit__c/fields/Work_Request_Required__c.field-meta.xml
<CustomField>
    <fullName>Work_Request_Required__c</fullName>
    <label>Work Request Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>