BradkenProduction/force-app/main/default/objects/Site_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Contact__c</columns>
    <columns>Site_Visit_Secondary_Purpose__c</columns>
    <columns>Opportunity1__c</columns>
    <columns>Next_Steps__c</columns>
    <columns>Hours_spent_with_Customer__c</columns>
    <columns>Site_Visit_Date__c</columns>
    <columns>Hours_spent_travelling__c</columns>
    <columns>Site_Visit__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>