BradkenProduction/force-app/main/default/objects/Site_Visit__c/listViews/Angga_s_site_visit.listView-meta.xml
<ListView>
    <fullName>Angga_s_site_visit</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Next_Steps__c</columns>
    <columns>Site_Visit_Date__c</columns>
    <columns>Site_Visit_Secondary_Purpose__c</columns>
    <columns>Opportunity1__c</columns>
    <filterScope>Mine</filterScope>
    <label>Angga&apos;s site visit</label>
</ListView>