BradkenProduction/force-app/main/default/objects/Site_Visit__c/listViews/Anton_Maletin.listView-meta.xml
<ListView>
    <fullName>Anton_Maletin</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Site_name__c</columns>
    <columns>Site_Visit_Date__c</columns>
    <columns>Site_Visit_Secondary_Purpose__c</columns>
    <columns>Opportunity1__c</columns>
    <columns>Next_Steps__c</columns>
    <filterScope>Mine</filterScope>
    <label>Anton Maletin</label>
</ListView>