BradkenProduction/force-app/main/default/objects/Site_Visit__c/listViews/Ariel_s_Site_Visit.listView-meta.xml
<ListView>
    <fullName>Ariel_s_Site_Visit</fullName>
    <columns>Site_Visit_Date__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Sales_Rep__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact__c</columns>
    <columns>Site_Visit_Secondary_Purpose__c</columns>
    <columns>Opportunity1__c</columns>
    <columns>Next_Steps__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>ariel soto</value>
    </filters>
    <label>Ariel´s Site Visit</label>
</ListView>