BradkenProduction/force-app/main/default/objects/Site_Visit__c/listViews/Aymerie_s_Site_Visits.listView-meta.xml
<ListView>
    <fullName>Aymerie_s_Site_Visits</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Lefebvre</value>
    </filters>
    <label>Aymerie&apos;s Site Visits</label>
</ListView>