BradkenProduction/force-app/main/default/objects/Site_Visit__c/listViews/Brenden_Site_Visits.listView-meta.xml
<ListView>
    <fullName>Brenden_Site_Visits</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Site_name__c</columns>
    <columns>Site_Visit_Date__c</columns>
    <columns>Site_Visit_Secondary_Purpose__c</columns>
    <columns>Opportunity1__c</columns>
    <columns>Opportunity2__c</columns>
    <columns>Next_Steps__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Brenden Vines</value>
    </filters>
    <label>Brenden Site Visits</label>
</ListView>