BradkenProduction/force-app/main/default/objects/Site_Visit__c/listViews/Copy_of_Martin_s_Site_Visits.listView-meta.xml
<ListView>
    <fullName>Copy_of_Martin_s_Site_Visits</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Site_Visit_Date__c</columns>
    <columns>Site_Visit_Secondary_Purpose__c</columns>
    <columns>Opportunity1__c</columns>
    <columns>Next_Steps__c</columns>
    <columns>Colleague_in_Attendance__c</columns>
    <columns>Sales_Rep__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Rep__c</field>
        <operation>equals</operation>
        <value>Martin Steyn,Reinard Abbott</value>
    </filters>
    <label>Reinard and Martin&apos;s Site Visits</label>
</ListView>