BradkenProduction/force-app/main/default/objects/Site_Visit__c/listViews/Craig_s_Site_Visits.listView-meta.xml
<ListView>
    <fullName>Craig_s_Site_Visits</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Site_Visit_Date__c</columns>
    <columns>Site_Visit_Secondary_Purpose__c</columns>
    <columns>Opportunity1__c</columns>
    <columns>Next_Steps__c</columns>
    <filterScope>Mine</filterScope>
    <label>Craig&apos;s Site Visits</label>
</ListView>