BradkenProduction/force-app/main/default/objects/Site_Visit__c/listViews/Daniel_s_Site_Visits1.listView-meta.xml
<ListView>
    <fullName>Daniel_s_Site_Visits1</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Daniel&apos;s Site Visits</label>
</ListView>