BradkenProduction/force-app/main/default/objects/Site_Visit__c/listViews/Daniel_s_Site_Visits2.listView-meta.xml
<ListView>
    <fullName>Daniel_s_Site_Visits2</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Site_name__c</columns>
    <columns>Site_Visit_Date__c</columns>
    <columns>Site_Visit__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Site_Visit_Primary_Purpose__c</columns>
    <columns>Next_Steps__c</columns>
    <filterScope>Mine</filterScope>
    <label>Daniel&apos;s Site Visits</label>
</ListView>